--- a/src/styles/modules/menu.scss
+++ b/src/styles/modules/menu.scss
@@ -10,7 +10,7 @@
 
   z-index: 10;
 
-  @media screen and (max-width: 1023px) {
+  @include screen-l {
     top: 70px;
   }
 
@@ -24,11 +24,11 @@
 
     height: 720px;
 
-    @media screen and (max-width: 1023px) {
+    @include screen-l {
       height: 690px;
     }
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       height: 510px;
     }
 
@@ -50,11 +50,11 @@
 
       z-index: 1;
 
-      @media screen and (max-width: 1199px) {
+      @include screen-xl {
         height: 450px;
       }
 
-      @media screen and (max-width: 1023px) {
+      @include screen-l {
         display: none;
       }
     }
@@ -64,13 +64,13 @@
     display: flex;
     margin: 10px 0 80px;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       display: none;
     }
   }
 
   &__nav {
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       margin-top: 60px;
     }
   }
@@ -79,7 +79,7 @@
     &:not(:last-child) {
       margin-bottom: 60px;
 
-      @media screen and (max-width: 767px) {
+      @include screen-m {
         margin-bottom: 40px;
       }
     }
@@ -94,7 +94,7 @@
     color: $color-light;
     text-decoration: none;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       font-size: 24px;
       line-height: 24px;
     }
@@ -105,7 +105,7 @@
     display: flex;
     margin-top: 120px;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       margin-top: 80px;
       flex-direction: column;
     }
@@ -114,7 +114,7 @@
       &:not(:last-child) {
         margin-right: 30px;
 
-        @media screen and (max-width: 767px) {
+        @include screen-m {
           margin-bottom: 20px;
         }
       }
@@ -132,7 +132,7 @@
       background-color: $color-light;
       opacity: 0.3;
 
-      @media screen and (max-width: 767px) {
+      @include screen-m {
         display: none;
       }
     }
