--- a/src/styles/modules/news.scss
+++ b/src/styles/modules/news.scss
@@ -1,12 +1,18 @@
 .news {
   padding: 120px 0 180px;
 
-  @media screen and (max-width: 1023px) {
+  @include screen-l {
     padding: 120px 0 115px;
   }
 
-  @media screen and (max-width: 767px) {
+  @include screen-m {
     padding: 80px 0;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__header {
@@ -15,10 +21,14 @@
     position: relative;
     left: -200px;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       position: static;
       text-align: left;
       font-size: 36px;
+    }
+
+    @include screen-s {
+      align-self: flex-start;
     }
   }
 
@@ -27,7 +37,7 @@
     margin-top: 75px;
     margin-bottom: 95px;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       margin-top: 60px;
       margin-bottom: 0;
     }
@@ -40,13 +50,13 @@
 
     //FIX IT WITH SLIDER:
     &:nth-child(3) {
-      @media screen and (max-width: 1023px) {
+      @include screen-l {
         display: none;
       }
     }
 
     &:nth-child(2) {
-      @media screen and (max-width: 767px) {
+      @include screen-m {
         display: none;
       }
     }
