--- a/src/styles/modules/subscribe.scss
+++ b/src/styles/modules/subscribe.scss
@@ -1,7 +1,7 @@
 .subscribe {
   padding: 160px 0;
 
-  @media screen and (max-width: 1023px) {
+  @include screen-l {
     padding: 110px 0;
   }
 
@@ -13,7 +13,7 @@
     margin-bottom: 40px;
     line-height: 57.6px;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       font-size: 36px;
       line-height: 36px;
     }
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: space-between;
 
-    @media screen and (max-width: 1023px) {
+    @include screen-l {
       flex-direction: column;
     }
   }
@@ -32,7 +32,7 @@
   &__info {
     max-width: 570px;
 
-    @media screen and (max-width: 1023px) {
+    @include screen-l {
       margin-bottom: 80px;
     }
   }
@@ -46,16 +46,18 @@
 
     transition: opacity 1s ease, transform 0.4s ease;
 
-    @media screen and (max-width: 1023px) {
-      right: 37%;
-    }
-
-    @media screen and (max-width: 767px) {
-      right: 5%;
-    }
-
     &:hover {
       transform: scale(1.25);
+    }
+  }
+
+  &__form {
+    position: relative;
+    display: flex;
+    width: 360px;
+
+    @include screen-m {
+      width: 280px;
     }
   }
 
@@ -77,7 +79,7 @@
 
     outline: none;
 
-    @media screen and (max-width: 767px) {
+    @include screen-m {
       width: 230px;
     }
 
