--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,11 +35,11 @@ body {
   padding: 0 55px;
   width: 100%;
 
-  @media screen and (max-width: 1023px) {
+  @include screen-l {
     padding: 0 99px;
   }
 
-  @media screen and (max-width: 767px) {
+  @include screen-m {
     padding: 0 20px;
   }
 }
